--- a/po/ja_JP.po
+++ b/po/ja_JP.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-06 14:43+0100\n"
+"POT-Creation-Date: 2020-06-17 16:32+0200\n"
 "PO-Revision-Date: 2016-01-06 09:11-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Japanese\n"
@@ -19,33 +19,46 @@ msgstr ""
 msgid "    SAR panel icon has NOT been loaded"
 msgstr ""
 #
-msgid ""
-"   Oil Rig Search\n"
-"(Quadrant Single)"
-msgstr ""
-#
 msgid "\""
 msgstr "\""
 #
 msgid "'"
 msgstr "'"
 #
+msgid "0.1"
+msgstr ""
+#
+msgid "0.2"
+msgstr ""
+#
+msgid "0.5"
+msgstr ""
+#
 msgid "1"
 msgstr "1"
+#
+msgid "1 unit only"
+msgstr ""
 #
 msgid "2"
 msgstr "2"
 #
-msgid "Approach course"
+msgid "2 units A&B"
 msgstr ""
 #
-msgid "Approach course    "
+msgid "3"
 msgstr ""
 #
-msgid "Approach course      "
+msgid "4"
+msgstr ""
+#
+msgid "5"
 msgstr ""
 #
 msgid "CPU saving settings"
+msgstr ""
+#
+msgid "Calculate"
 msgstr ""
 #
 msgid "Capture Cursor Position"
@@ -68,13 +81,16 @@ msgstr ""
 msgid "Cursor"
 msgstr ""
 #
-msgid "Datum (Start of Search)"
+msgid "D MM SS"
 msgstr ""
 #
-msgid "Decimal Degree"
+msgid "D MM.mmm"
 msgstr ""
 #
-msgid "Degree, Minutes"
+msgid "D.ddd"
+msgstr ""
+#
+msgid "DATUM / CSP (Start of Search)"
 msgstr ""
 #
 msgid "Degrees"
@@ -82,10 +98,6 @@ msgstr ""
 #
 msgid "E"
 msgstr "E"
-#
-#, fuzzy
-msgid "ES"
-msgstr "S"
 #
 msgid "Error"
 msgstr ""
@@ -96,15 +108,16 @@ msgstr ""
 msgid "Error occurred, aborting SAR calc!"
 msgstr ""
 #
-msgid ""
-"Expanding Square\n"
-"         Search"
+msgid "Expanding Square"
 msgstr ""
 #
 msgid "Export SAR track GPX file as"
 msgstr ""
 #
-msgid "GPX route name (Edit?)"
+msgid "First turn                    "
+msgstr ""
+#
+msgid "For this search pattern the Start Point entered is the CSP"
 msgstr ""
 #
 msgid "General settings"
@@ -113,10 +126,28 @@ msgstr ""
 msgid "Generate &GPX"
 msgstr ""
 #
+msgid "IAMSAR"
+msgstr ""
+#
+msgid "Icons "
+msgstr ""
+#
+msgid "Initial course"
+msgstr ""
+#
+msgid "Initial course    "
+msgstr ""
+#
+msgid "Initial course        "
+msgstr ""
+#
+msgid "Initial leg course        "
+msgstr ""
+#
 msgid "Lat "
 msgstr ""
 #
-msgid "Lattitude  "
+msgid "Latitude  "
 msgstr ""
 #
 msgid "Leave ticked, so that you can use cursor position."
@@ -125,11 +156,9 @@ msgstr ""
 msgid "Leave ticked, so you can use ship's position"
 msgstr ""
 #
-msgid "Leg Distance        "
-msgstr ""
-#
-msgid "Leg Space"
-msgstr ""
+#, fuzzy
+msgid "Leg Space             "
+msgstr "検索速度             "
 #
 msgid "Leg Spacing (S)       "
 msgstr ""
@@ -158,27 +187,27 @@ msgstr ""
 msgid "Number of Legs        "
 msgstr ""
 #
-msgid "Number of cycles"
+msgid "Number of passes"
 msgstr ""
 #
-msgid "OR"
+msgid "Oil Rig (Quadrant Single)"
 msgstr ""
 #
 msgid "Opacity"
 msgstr ""
 #
-#, fuzzy
-msgid "PS"
-msgstr "S"
-#
-msgid "Parallel Track Search"
+msgid "PORT"
 msgstr ""
 #
-msgid "Results"
+msgid "Parallel Track"
 msgstr ""
 #
 msgid "Route Preferences"
 msgstr "ルート設定"
+#
+#, fuzzy
+msgid "Route for Ship           "
+msgstr "検索速度             "
 #
 msgid "S"
 msgstr "S"
@@ -186,29 +215,28 @@ msgstr "S"
 msgid "SAR"
 msgstr "SAR"
 #
-msgid "SAR Plugin by SaltyPaws"
+msgid "SAR Plugin by SaltyPaws/Rasbats"
 msgstr ""
 #
 msgid "SAR preferences"
 msgstr "SAR設定"
 #
-msgid "SAR: Expanding Square"
+msgid "STARBOARD"
 msgstr ""
 #
-msgid "SAR: Oil Rig"
-msgstr ""
-#
-msgid "SAR: Parallel Track"
-msgstr ""
-#
-msgid "SAR: Sector Search"
-msgstr ""
-#
-msgid "Search Distance"
+msgid "Search Distance / Time"
 msgstr ""
 #
 msgid "Search Leg length     "
 msgstr ""
+#
+#, fuzzy
+msgid "Search Method  "
+msgstr "検索速度             "
+#
+#, fuzzy
+msgid "Search Radius      "
+msgstr "検索速度             "
 #
 #, fuzzy
 msgid "Search Speed       "
@@ -219,10 +247,6 @@ msgid "Search Speed           "
 msgstr "検索速度             "
 #
 msgid "Search Speed             "
-msgstr "検索速度             "
-#
-#, fuzzy
-msgid "Search Time      "
 msgstr "検索速度             "
 #
 msgid "Search and Rescue Patterns"
@@ -237,24 +261,28 @@ msgstr ""
 msgid "Ship"
 msgstr ""
 #
-msgid "Ships available           "
+msgid "Start Position"
 msgstr ""
 #
-msgid "To copy the cursor location press <CTRL>+S"
+msgid ""
+"To copy the cursor location place the cursor on the chart \n"
+"     ...and press <CTRL>+S"
 msgstr ""
 #
 #, fuzzy
 msgid "Track space (S)          "
 msgstr "検索速度             "
 #
-#, fuzzy
-msgid "VS"
-msgstr "S"
+msgid "USCG"
+msgstr ""
 #
 msgid "W"
 msgstr "W"
 #
-msgid "Write waypoint names     "
+msgid "Waypoint names "
+msgstr ""
+#
+msgid "Waypoint names     "
 msgstr ""
 #
 msgid "error in input range validation"
@@ -268,3 +296,18 @@ msgstr ""
 #
 msgid "n"
 msgstr ""
+#
+#
+#, fuzzy
+#~ msgid "ES"
+#~ msgstr "S"
+#
+#
+#, fuzzy
+#~ msgid "PS"
+#~ msgstr "S"
+#
+#
+#, fuzzy
+#~ msgid "VS"
+#~ msgstr "S"
