--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-06 14:43+0100\n"
+"POT-Creation-Date: 2020-06-17 16:32+0200\n"
 "PO-Revision-Date: 2016-02-27 08:05-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Portuguese, Brazilian\n"
@@ -19,36 +19,47 @@ msgstr ""
 msgid "    SAR panel icon has NOT been loaded"
 msgstr ""
 #
-msgid ""
-"   Oil Rig Search\n"
-"(Quadrant Single)"
-msgstr ""
-#
 msgid "\""
 msgstr "\""
 #
 msgid "'"
 msgstr "'"
 #
+msgid "0.1"
+msgstr ""
+#
+msgid "0.2"
+msgstr ""
+#
+msgid "0.5"
+msgstr ""
+#
 msgid "1"
 msgstr "1"
+#
+msgid "1 unit only"
+msgstr ""
 #
 msgid "2"
 msgstr "2"
 #
-msgid "Approach course"
-msgstr "Rumo de aproximação"
+msgid "2 units A&B"
+msgstr ""
 #
-#, fuzzy
-msgid "Approach course    "
-msgstr "Rumo de aproximação     "
+msgid "3"
+msgstr ""
 #
-#, fuzzy
-msgid "Approach course      "
-msgstr "Rumo de aproximação     "
+msgid "4"
+msgstr ""
+#
+msgid "5"
+msgstr ""
 #
 msgid "CPU saving settings"
 msgstr "Salvar as configurações de CPU"
+#
+msgid "Calculate"
+msgstr "Calcular"
 #
 msgid "Capture Cursor Position"
 msgstr "Capturar posição do cursor"
@@ -72,25 +83,24 @@ msgstr ""
 msgid "Cursor"
 msgstr "Cursor"
 #
-msgid "Datum (Start of Search)"
-msgstr "Datum (Início de busca)"
+msgid "D MM SS"
+msgstr ""
 #
-msgid "Decimal Degree"
-msgstr "Graus decimais"
+msgid "D MM.mmm"
+msgstr ""
+#
+msgid "D.ddd"
+msgstr ""
 #
 #, fuzzy
-msgid "Degree, Minutes"
-msgstr "Graus"
+msgid "DATUM / CSP (Start of Search)"
+msgstr "Datum (Início de busca)"
 #
 msgid "Degrees"
 msgstr "Graus"
 #
 msgid "E"
 msgstr "E"
-#
-#, fuzzy
-msgid "ES"
-msgstr "S"
 #
 msgid "Error"
 msgstr ""
@@ -102,17 +112,18 @@ msgstr "Erro no cálculo. Por favor, verifique a entrada!"
 msgid "Error occurred, aborting SAR calc!"
 msgstr "Ocorreu um erro, abortando o calculo do SAR!"
 #
-msgid ""
-"Expanding Square\n"
-"         Search"
-msgstr ""
-"Expandir Square\n"
-"Pesquisar"
+#, fuzzy
+msgid "Expanding Square"
+msgstr "SAR: Expandindo quadrados"
 #
 msgid "Export SAR track GPX file as"
 msgstr "Exportar SAR faixa de arquivo GPX como"
 #
-msgid "GPX route name (Edit?)"
+#, fuzzy
+msgid "First turn                    "
+msgstr "Comprimento da perna               "
+#
+msgid "For this search pattern the Start Point entered is the CSP"
 msgstr ""
 #
 msgid "General settings"
@@ -121,10 +132,31 @@ msgstr "Definições gerais"
 msgid "Generate &GPX"
 msgstr "Gerar &GPX"
 #
+msgid "IAMSAR"
+msgstr ""
+#
+msgid "Icons "
+msgstr ""
+#
+msgid "Initial course"
+msgstr ""
+#
+#, fuzzy
+msgid "Initial course    "
+msgstr "Rumo de aproximação     "
+#
+#, fuzzy
+msgid "Initial course        "
+msgstr "Rumo de aproximação     "
+#
+msgid "Initial leg course        "
+msgstr ""
+#
 msgid "Lat "
 msgstr "Lat "
 #
-msgid "Lattitude  "
+#, fuzzy
+msgid "Latitude  "
 msgstr "Latitude  "
 #
 msgid "Leave ticked, so that you can use cursor position."
@@ -134,11 +166,8 @@ msgid "Leave ticked, so you can use ship's position"
 msgstr "Deixar marcada, então você pode usar a posição do navio"
 #
 #, fuzzy
-msgid "Leg Distance        "
-msgstr "Comprimento da perna          "
-#
-msgid "Leg Space"
-msgstr ""
+msgid "Leg Space             "
+msgstr "Comprimento da perna              "
 #
 #, fuzzy
 msgid "Leg Spacing (S)       "
@@ -171,28 +200,29 @@ msgstr "Numero de pernas       "
 msgid "Number of Legs        "
 msgstr "Numero de pernas       "
 #
-msgid "Number of cycles"
-msgstr "Número de ciclos"
+#, fuzzy
+msgid "Number of passes"
+msgstr "Numero de quadrados"
 #
-msgid "OR"
+msgid "Oil Rig (Quadrant Single)"
 msgstr ""
 #
 msgid "Opacity"
 msgstr "Opacidade"
 #
-#, fuzzy
-msgid "PS"
-msgstr "S"
+msgid "PORT"
+msgstr ""
 #
 #, fuzzy
-msgid "Parallel Track Search"
+msgid "Parallel Track"
 msgstr "Busca paralela"
-#
-msgid "Results"
-msgstr "Resultados"
 #
 msgid "Route Preferences"
 msgstr "Preferências de rota"
+#
+#, fuzzy
+msgid "Route for Ship           "
+msgstr "Velocidade de busca             "
 #
 msgid "S"
 msgstr "S"
@@ -200,30 +230,30 @@ msgstr "S"
 msgid "SAR"
 msgstr "SAR"
 #
-msgid "SAR Plugin by SaltyPaws"
+#, fuzzy
+msgid "SAR Plugin by SaltyPaws/Rasbats"
 msgstr "SAR Plugin por SaltyPaws"
 #
 msgid "SAR preferences"
 msgstr "Preferências SAR"
 #
-msgid "SAR: Expanding Square"
-msgstr "SAR: Expandindo quadrados"
-#
-msgid "SAR: Oil Rig"
-msgstr "SAR: Plataforma Petrolífera"
+msgid "STARBOARD"
+msgstr ""
 #
 #, fuzzy
-msgid "SAR: Parallel Track"
-msgstr "Busca paralela"
-#
-msgid "SAR: Sector Search"
-msgstr "SAR: Busca por setores"
-#
-msgid "Search Distance"
+msgid "Search Distance / Time"
 msgstr "Distancia de busca"
 #
 #, fuzzy
 msgid "Search Leg length     "
+msgstr "Tempo de busca        "
+#
+#, fuzzy
+msgid "Search Method  "
+msgstr "Tempo de busca        "
+#
+#, fuzzy
+msgid "Search Radius      "
 msgstr "Tempo de busca        "
 #
 #, fuzzy
@@ -237,10 +267,6 @@ msgstr "Velocidade de busca             "
 msgid "Search Speed             "
 msgstr "Velocidade de busca             "
 #
-#, fuzzy
-msgid "Search Time      "
-msgstr "Tempo de busca        "
-#
 msgid "Search and Rescue Patterns"
 msgstr "Padrões de Busca e Salvamento"
 #
@@ -253,24 +279,32 @@ msgstr ""
 msgid "Ship"
 msgstr "Navio"
 #
-msgid "Ships available           "
-msgstr ""
+#, fuzzy
+msgid "Start Position"
+msgstr "Capturar posição do navio"
 #
-msgid "To copy the cursor location press <CTRL>+S"
+#, fuzzy
+msgid ""
+"To copy the cursor location place the cursor on the chart \n"
+"     ...and press <CTRL>+S"
 msgstr ""
+"Para copiar a localização do cursor, escolha a Latitude ou Longitude na caixa "
+"e pressione <CTRL>+S."
 #
 #, fuzzy
 msgid "Track space (S)          "
 msgstr "Velocidade de busca             "
 #
-#, fuzzy
-msgid "VS"
-msgstr "S"
+msgid "USCG"
+msgstr ""
 #
 msgid "W"
 msgstr "W"
 #
-msgid "Write waypoint names     "
+msgid "Waypoint names "
+msgstr ""
+#
+msgid "Waypoint names     "
 msgstr ""
 #
 msgid "error in input range validation"
@@ -285,45 +319,96 @@ msgstr "KTs"
 msgid "n"
 msgstr "n"
 #
-#~ msgid "Calculate"
-#~ msgstr "Calcular"
+#
+#~ msgid "Approach course"
+#~ msgstr "Rumo de aproximação"
+#
+#
+#~ msgid "Decimal Degree"
+#~ msgstr "Graus decimais"
+#
+#
+#, fuzzy
+#~ msgid "Degree, Minutes"
+#~ msgstr "Graus"
+#
+#
+#, fuzzy
+#~ msgid "ES"
+#~ msgstr "S"
+#
+#
+#~ msgid ""
+#~ "Expanding Square\n"
+#~ "         Search"
+#~ msgstr ""
+#~ "Expandir Square\n"
+#~ "Pesquisar"
+#
 #
 #~ msgid "For Ship Number      "
 #~ msgstr "Para número do barco      "
 #
-#~ msgid ""
-#~ "In order to copy the cursor location, select either the Lattitude or "
-#~ "Longitude coordinate box, and press <CTRL>+S."
-#~ msgstr ""
-#~ "Para copiar a localização do cursor, escolha a Latitude ou Longitude na "
-#~ "caixa e pressione <CTRL>+S."
 #
-#~ msgid "Leg Distance              "
-#~ msgstr "Comprimento da perna              "
+#, fuzzy
+#~ msgid "Leg Distance        "
+#~ msgstr "Comprimento da perna          "
 #
-#~ msgid "Leg Distance               "
-#~ msgstr "Comprimento da perna               "
 #
-#~ msgid "Number of Squares"
-#~ msgstr "Numero de quadrados"
+#~ msgid "Number of cycles"
+#~ msgstr "Número de ciclos"
+#
 #
 #~ msgid "Oil Rig Search"
 #~ msgstr "Procurar Plataforma Petrolifera"
 #
+#
+#, fuzzy
+#~ msgid "PS"
+#~ msgstr "S"
+#
+#
+#, fuzzy
+#~ msgid "Parallel Track Search"
+#~ msgstr "Busca paralela"
+#
+#
+#~ msgid "Results"
+#~ msgstr "Resultados"
+#
+#
 #~ msgid "Route"
 #~ msgstr "Rota"
+#
+#
+#~ msgid "SAR: Oil Rig"
+#~ msgstr "SAR: Plataforma Petrolífera"
+#
+#
+#~ msgid "SAR: Sector Search"
+#~ msgstr "SAR: Busca por setores"
+#
 #
 #~ msgid "SAR: Trackline"
 #~ msgstr "SAR: Linha de rumo"
 #
+#
 #~ msgid "Search Pattern name for GPX file"
 #~ msgstr "Busca o nome padrão para o arquivo GPX"
+#
 #
 #~ msgid "Search Speed         "
 #~ msgstr "Velocidade de busca         "
 #
+#
+#, fuzzy
+#~ msgid "VS"
+#~ msgstr "S"
+#
+#
 #~ msgid "\\u00b0"
 #~ msgstr "\\u00b0"
+#
 #
 #~ msgid "\\u00b0 ' \""
 #~ msgstr "\\u00b0 ' \""
